i've created cruiser and dual files

--- a/dirt.html
+++ b/dirt.html
@@ -19,7 +19,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarcollapse">
                     <div class="navbar-nav">
-                        <a href="index.html" class="nav-link "><button class="btn btn bg-danger text-light">Cruiser bikes</button></a>
+                        <a href="cruiser.html" class="nav-link "><button class="btn btn bg-danger text-light">Cruiser bikes</button></a>
                         <a href="sports.html" class="nav-link"><button class="btn btn bg-danger text-light">Sport bikes</button></a>
                         <a href="dual.html" class="nav-link"><button class="btn btn bg-danger text-light ">dual purpose bikes</button></a>
                         <a href="dirt.html" class="nav-link"><button class="btn btn bg-danger text-light ">Dirt bikes</button></a>
@@ -96,10 +96,22 @@
         <div class="card shadow p-3">
             <img src="images/dirt17.jpg" alt="" class="img-thumnail" height="700px">
             <div class="card-body">
-                <h6>L16</h6>
+                <h6>L 16</h6>
                 <b class="text-warning">$90</b>
                 <br>
                 <b class="badge text-light bg-danger">9% off</b>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-12">
+        <div class="card shadow p-3">
+            <img src="images/dirt17.jpg" alt="" class="img-thumnail" height="700px">
+            <div class="card-body">
+                <h6>G 12</h6>
+                <b class="text-warning">$40</b>
+                <br>
+                <b class="badge text-light bg-danger">11% off</b>
             </div>
         </div>
     </div>
