touring bike file

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarcollapse">
                     <div class="navbar-nav">
-                        <a href="index.html" class="nav-link "><button class="btn btn bg-danger text-light">Cruiser bikes</button></a>
+                        <a href="cruiser.html" class="nav-link "><button class="btn btn bg-danger text-light">Cruiser bikes</button></a>
                         <a href="sports.html" class="nav-link"><button class="btn btn bg-danger text-light">Sport bikes</button></a>
                         <a href="dual.html" class="nav-link"><button class="btn btn bg-danger text-light ">dual purpose bikes</button></a>
                         <a href="dirt.html" class="nav-link"><button class="btn btn bg-danger text-light ">Dirt bikes</button></a>
@@ -75,11 +75,11 @@
                             <div class="carousel-caption">
                                 <h3>Find your dream bike here</h3>
                                 <p>You're all welcomed to <a href="Bundi_Bikes">Bundi_bikes</a>where you'll find the type of bike that you wished to own at afordable prices with a long durability time and also offering a 12months warrant on the pruduct sold</p>
-                                <a href="Contact.html" target="_blank">
+                                
                                 <button class="btn btn-danger">concerning bikes? 
                                     here we go..
+                                    <img src="images/telephone.svg" alt="" height="50px">+254702689807
                                 </button>
-                                </a>
                             </div>
                         </div>
                       <!-- end of item 3 -->
@@ -345,6 +345,7 @@
                     <textarea name="" id="" class="form-control" placeholder="Leave a comment here" rows="7"></textarea>
                     <br>
                     <input type="button" class="btn btn-danger" value="send message">
+                    <img src="images/telephone.svg" alt="" height="50px" > <b>+254702689807</b>
                 </form>
 
               </div>
