--- a/dirt.html
+++ b/dirt.html
@@ -34,7 +34,6 @@
 
             </nav>
         </section>
-
        <!-- end of nerve bar -->
 <section class="row">
     <h2 class="text-center bg-danger">dirt bikes</h2>
@@ -121,5 +120,6 @@
  
 
 </div>
+ <script src="js/bootstrap.js"></script>
 </body>
 </html>
