--- a/sports.html
+++ b/sports.html
@@ -34,7 +34,7 @@
             </nav>
         </section>
         <section class="row text-center">
-            <h2 class="text-center bg-danger text-light"></h2>
+            <h2 class="text-center bg-danger text-light">sports bikes</h2>
         </section>
 
         <section class="row text-center">
@@ -122,6 +122,6 @@
 
            
     </div>
-    
+     <script src="js/bootstrap.js"></script>
 </body>
 </html>
